...
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
            app:layout_constraintTop_toBottomOf="@id/movies_toolbar_detail"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/movies_tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_spacing_medium"
            android:layout_marginEnd="@dimen/movies_spacing_medium"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/movies_text_size_headline"
...
            app:icon="@android:drawable/btn_star_big_off"
            app:layout_constraintTop_toBottomOf="@id/movies_tv_movie_genres"
            app:layout_constraintStart_toStartOf="@id/movies_tv_movie_title"
            app:layout_constraintEnd_toEndOf="@id/movies_tv_movie_title" />

        <TextView
            android:id="@+id/movies_tv_overview_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_spacing_medium"
            android:layout_marginTop="@dimen/movies_spacing_large"
            android:layout_marginEnd="@dimen/movies_spacing_medium"
            android:text="@string/movies_detail_overview_label"
...
