<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="Buscar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/movies_home_favorites_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="Sair"
        app:showAsAction="never" />

</menu>